add Docker build and test steps to CI pipeline

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,9 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - name: Build Docker image
+        run: docker build -t test-image .
+
+      - name: Run tests in Docker
+        run: docker run --rm test-image
